force-app/main/default/objects/Speaker_Session_Assignment__c/Speaker_Session_Assignment__c.object-meta.xml
<CustomObject>
    <label>Speaker Session Assignment</label>
    <nameField>
        <displayFormat>SSA-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Session Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>