force-app/main/default/objects/Speaker_Session_Assignment__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <label>Assignment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>