force-app/main/default/objects/Speaker_Session_Assignment__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>EventSphere_Session__c</referenceTo>
    <relationshipLabel>Speaker Session Assignments</relationshipLabel>
    <relationshipName>Speaker_Session_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>