force-app/main/default/objects/Speaker_Session_Assignment__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>EventSphere_Speaker__c</referenceTo>
    <relationshipLabel>Speaker Session Assignments</relationshipLabel>
    <relationshipName>Speaker_Session_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>