force-app/main/default/objects/Speaker_Session_Assignment__c/fields/Speaker_Role__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Role__c</fullName>
    <label>Speaker Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keynote Speaker</fullName>
            </value>
            <value>
                <fullName>Presenter</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Guest Speaker</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>