force-app/main/default/objects/Speaker_Session_Assignment__c/fields/Speaking_Order__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Order__c</fullName>
    <label>Speaking Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>